# iphone-like-demo

./: ChangeLog  Makefile.am  README.md  adp-build.sh  autogen.sh  build.sh  config-demo.ipaq  config-demo.pc  configure.ac  configure.in  cp2sd
animate/: Makefile.am  animate.h  animate_sence.c  make_test.sh  timeline.c
animate/common_animates/: Makefile.am  common_animates.c
animate/pcc/: Makefile  pc_test.c  pcc.h  pcc.l  pcc.y  pcc_help.c  tmp.pc
animate/pcc/test/: 1.pc  2.pc  3.pc
ime/: Makefile.am  softkeywindow.c  softkeywindow.h  tooltip.c  tooltip.h
ime/libime/: Makefile.am  ime.c  ime_pinyin.c  ime_pinyin.h  mgpti.c  mgpti.h  mgpti_helper.c
ime/softkeyboard/: Makefile.am  common.c  common.h  en_kbd.c  num_kbd.c  pinyin_kbd.c  punct_kbd.c  resource.c  softkeyboard.h
ime/softkeyboard/240-320/: Makefile.am
ime/softkeyboard/320-240/: Makefile.am  bin2c  images2c  size_320x240.h
ime/softkeyboard/480-272/: Makefile.am  char_key_mask.c  en_kbd_bkg.c  func_key_mask.c  num_kbd_bkg.c  pinyin_kbd_bkg.c  punct_kbd_bkg.c  size_480x272.h
include/: Makefile.am  common.h  my_debug.h
minigui/: Makefile.am  MiniGUI-ipaq.cfg  MiniGUI-pc.cfg  config-minigui.ipaq  config-minigui.pc  res.list
src/: Makefile.am  animates.pcc  busywin.c  busywin.h  busywin_api.c  desktop-layout.c  desktop.c  desktop.h  dragmanager.c  dragmanager.h  icon_animate.c  icon_layout.c  icon_layout.h  iphone-animates.h  iphone-like-demo.etc  layout.c  layout.h  layouthlp.c  layouthlp.h  mginit.c  mlskbd.c  mlskbd.h  mlssize.h  phone_icon.c  phone_icon.h  quick_view.c  quick_view.h  sence.c  sence.h  sfkbd_client.c  sfkbd_client.h  sharedbuff.c  sharedbuff.h  sharedbuff_api.c  timer.c  timer.h
src/agg/: Makefile.am  agg_coverflow.cpp  agg_coverflow.h  agg_flip.cpp  agg_flip.h  agg_scroll.cpp  agg_scroll.h  agg_trans_affine.h
src/agg/test/CoverFlow/: CoverFlow.c  Makefile.am
src/boxy/: Makefile.am  housekeeper.c  housekeeper.h  housekeeper_data.h  housekeeper_infowin.c  housekeeper_map.c  housekeeper_map.h  housekeeper_menu.c  housekeeper_text.h
src/calculator/: Makefile.am  calc.c  calc_btn_code.h  calc_compute.c  calc_size.h  calc_type.h
src/calendar/: Makefile.am  calendar.c  monthcal.h  monthcalendar.c  monthcalendar_impl.h
src/configWifi/: Makefile.am  configWifi.c  iwfunc.c  iwfunc.h  readiwlist.c  readiwlist.h  setting.c  setting.h
src/ebctrl/: Makefile.am  ebbutton.c  ebbutton.h  ebcontrol.h  eblistview.c  eblistview.h
src/ex_wifi/: Makefile.am  route.c  route.h  wifiapi.c  wifiapi.h
src/iphone-animates/: Makefile.am  alpha_animate_test.c  animtates.pc  main_animates.c  mk_alpha.sh  preview_animtes.c  switch_animates.c
src/memo/: Makefile.am  custom_scroll.c  memo.c  memo.h
src/memo/res/: Makefile.am
src/others/: Makefile.am  others.c
src/picture/: Makefile.am  picture.c  picture.h
src/picture/view/: Makefile.am
src/res/: Makefile.am  arabic.txt  japa.txt
src/scrnsaver/: Makefile.am  watch.c
src/snake/: Makefile.am  worm.c  worm.h  worm_infowin.c  worm_level.h  worm_menu.c  worm_text.h
src/systemsetting/: Makefile.am  sysmain.c  sysmain.c.testagg  sysmain.h
src/systemsetting/date/: Makefile.am  moncal.h  moncalendar.c  moncalendar_impl.h  timeset.c  timeset.h
src/systemsetting/localnetwork/: Makefile.am  netcardset.c  netcardset.h
src/systemsetting/render/: Makefile.am  colordlg.c  colordlg.h  mask_pic.c  render.c  render.h
src/systemsetting/res/: Makefile.am
src/systemsetting/res/animate/: Makefile.am
src/systemsetting/res/date/: Makefile.am
src/systemsetting/res/localnetwork/: Makefile.am
src/systemsetting/res/screen_protect/: Makefile.am
src/systemsetting/res/wifisetting/: Makefile.am
src/systemsetting/screen_protect/: Makefile.am  screen_protect.c  screen_protect.h
src/systemsetting/wifisetting/: Makefile.am  ipset.c  ipset.h  wifimanual.c  wifiset.c  wifiset.h
src/watch/: Makefile.am  watch.c
src/weatherforecast/: Makefile.am  weather_forecast.c
test/: Makefile.am
test/process/: Makefile.am  mginit.c  notebook.c
test/thread/: Makefile.am  notebook.c
