AUTOMAKE_OPTIONS=subdir-objects

AM_CPPFLAGS = -I ../ -I ../../

bin_PROGRAMS = housekeeper

housekeeper_LDFLAGS = 

housekeeper_SOURCES = housekeeper.c housekeeper_map.c housekeeper_infowin.c housekeeper_menu.c ../sharedbuff_api.c \
	housekeeper_data.h  housekeeper.h  housekeeper_map.h  housekeeper_text.h
