# The directory where the data files will be installed
imgdatadir = $(bindir)/res/

imgdata_DATA = \
arabic.txt            down.png                                                                 thunder_fi.png \
bk.png                email.png                                      phone_left.png            thunder_se.png \
boxy_left.png         frozen_bubble_left.png       menu_btm.gif      phone.png                 trash.png \
boxy.png              frozen_bubble.png            menu_captbg.gif   phone_right.png           vline.png \
boxy_right.png        frozen_bubble_right.png      menu_mid.gif      picture_bg.png            watch_bg.png \
browser_left.png                                   menu_pt.png       picture_bg_pt.png         watch_bg_pt.png \
browser.png           gray_arrow.png               menu_top.gif      weather_bk2.gif           watch_left.png \
browser_right.png     hello_bk.png                 music_left.png    picture_viewer_left.png   watch_num.png \
colon.gif             hline.png                    music.png         picture_viewer.png        watch.png \
calc_bg_pt.png                                     music_right.png   picture_viewer_right.png  watch_right.png \
calc_ck_pt.png        housekeeper_goal.gif         na.png            r_arrow.png                               \
calc_num.png          housekeeper_man.gif          nb.png            scroll.png                weather_bk.png weather_bk2.gif \
calc.png              housekeeper_menu_btm.gif     nc.png            setting_left.png          weather_left.png \
calculator_bg.png     housekeeper_menu_captbg.gif  nd.png            setting.png               weather.png \
calculator_click.png  housekeeper_menu_mid.gif     ne.png            setting_right.png         weather_right.png \
calculator_left.png   housekeeper_menu_top.gif     new.png                                     worm_boni_hide.gif \
calculator.png        housekeeper_object.gif       new_press.png     snake_left.png            worm_boni_red.gif \
calculator_right.png  housekeeper_saveman.gif      nf.png            snake.png                 worm_boni_yellow.gif \
                      housekeeper_stone.gif        ng.png            snake_right.png           worm_map_node.gif \
calendar_bg.png       housekeeper_treasure.gif     nh.png            snow_fi.png               worm_menu_btm.gif \
calendar_bg_pt.png    ico.ico                      ni.png            snow_se.png               worm_menu_captbg.gif \
calendar_left.png     init_quickview.png           nj.png            stock_left.png            worm_menu_mid.gif \
calendar_num.png      itembk1.png                  nk.png            stock.png                 worm_menu_top.gif \
calendar.png          itembk2.png                  nl.png            stock_right.png           worm_node.gif \
calendar_right.png    itembk3.png                  note_left.png     suncloudy_fi.png          worm_node_hide.gif \
                      japa.txt                     note.png          suncloudy_se.png          \
del_bk.png            l_arrow.png                  note_right.png    sun_fi.png \
del_cancel.png        mainbkgnd.png                notes.png         sunrain_fi.png \
del_ok.png                                         notes_press.png   sunrain_se.png \
digits.gif                                         others_bg_pt.png  sun_se.png

EXTRA_DIST = ${imgdata_DATA}
