# The directory where the data files will be installed
imgdatadir = $(bindir)/res/memo

imgdata_DATA = \
del_bk.png      del_ok.png  gray_arrow.png               memo_sw.png  r_arrow.png  vline.png \
del_cancel.png  down.png    hline.png                    new.png      scroll.png \
del_dialog.png  email.png   l_arrow.png     memo_bk.png  notes.png    trash.png

EXTRA_DIST = ${imgdata_DATA}
