SUBDIRS=date localnetwork screen_protect wifisetting animate

# The directory where the data files will be installed
imgdatadir = $(bindir)/res/systemsetting

imgdata_DATA = \
arrow.png          browsersetting.png  localnetwork.png  noround_nr.png  screensaver.png  WI-FI.png \
belowround_nr.png  CancelButton.png    lookfeel.png      noround_ov.png  upround_nr.png \
belowround_ov.png  datetime.png        MainMenuBK.png    SaveButton.png  upround_ov.png

EXTRA_DIST = ${imgdata_DATA}
