# The directory where the data files will be installed
imgdatadir = $(bindir)/res/systemsetting/localnetwork

imgdata_DATA = \
ClientID.png    CloseSTATIC.png  FNStringBKG.png  IPAddr.png         SearchDomains.png \
CloseBOOTP.png  DHCP.png         FNString.png     IPSettingBKG.png   OpenDHCP.png    STATIC.png \
CloseDHCP.png   DNS.png          Gateway.png      IPSettingList.png  OpenSTATIC.png  SubnetMask.png

EXTRA_DIST = ${imgdata_DATA}
