# The directory where the data files will be installed
imgdatadir = $(bindir)/res/systemsetting/wifisetting

imgdata_DATA = \
Router.png            Thumber.bmp             WiFiArrow.png     WiFiSelectIcon.png \
OpenCloseBKG.png      SelectListBottom.png  UnselectListBottom.png  WiFiAutoCNet.png  WifiSelectSignal_ONE.png \
PasswordBKG.png       SelectListMiddle.png  UnselectListMiddle.png  WiFiBKG.png       WiFiString.png \
PasswordErrorBKG.png  SelectListTop.png     UnselectListTop.png     WiFiLock.png      WiFiUnselectIcon.png \
ManualCancel.png  ManualDone.png  ManualWiFiBKG.png \
PasswordOK.png        Select_Single.png     Unselect_Single.png     WiFiOpen.png

EXTRA_DIST = ${imgdata_DATA}
